[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/win_dialog.gd" type="Script" id=1]
[ext_resource path="res://assets/images/dialog_background.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/pricedown bl.otf"

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = SubResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 4 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/pricedown bl.otf"

[sub_resource type="DynamicFont" id=6]
size = 24
use_filter = true
font_data = SubResource( 5 )

[node name="Win Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 990.0
margin_bottom = 795.0
rect_scale = Vector2( 0.233219, 0.339594 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 92.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "You Won"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 118.0
margin_right = 317.0
margin_bottom = 338.0
rect_scale = Vector2( 0.64, 0.44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Buttons"]
margin_right = 44.0
margin_bottom = 220.0
text = "Home"
flat = true

[node name="Retry" type="Button" parent="Buttons"]
margin_left = 48.0
margin_right = 96.0
margin_bottom = 220.0
text = "Retry"
flat = true

[node name="Next" type="Button" parent="Buttons"]
margin_left = 100.0
margin_right = 141.0
margin_bottom = 220.0
text = "Next"
flat = true

[connection signal="pressed" from="Buttons/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Buttons/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_Next_pressed"]
